# canopen-slave-tester

./: .gitignore  CMakeLists.txt  README.md
cmake/: build_config.cmake  build_config.local.cmake.example  toolchain-imx8p.cmake
config/: SOURCE_SHA256SUMS  master.yml  tester.conf
deploy/: install_lely.sh  local.conf.example  run.sh  ssh_common.sh
docs/: acceptance.md  api.md  configuration.md  dcfgen-setup.md  deployment.md  design.md  getting-started.md  index.md
include/canopen_test/: app_config.hpp  application.hpp  error.hpp  lely_runtime.hpp  logger.hpp  runtime_status.hpp  signal_handler.hpp  version.hpp  version_config.hpp.in
src/: main.cpp
src/app/: app_config.cpp  application.cpp  logger.cpp  runtime_status.cpp  signal_handler.cpp
src/runtime/: lely_runtime.cpp
